# SairchEngine

./: CMakeLists.txt  README.md  config.json  jsonConv.cpp  jsonConv.h  main.cpp
